N-ary Tree Postorder Traversal